--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,43 @@
 {
     "type": "project",
+    "name": "survos-sites/translation-server",
+    "description": "Async translation server",
     "license": "proprietary",
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.2",
+        "php": ">=8.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/console": "7.2.*",
-        "symfony/dotenv": "7.2.*",
+        "api-platform/doctrine-orm": "^4.0",
+        "api-platform/symfony": "^4.0",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.13",
+        "doctrine/doctrine-migrations-bundle": "^3.4",
+        "doctrine/orm": "^3.3",
+        "nelmio/cors-bundle": "^2.5",
+        "phpdocumentor/reflection-docblock": "^5.6",
+        "phpstan/phpdoc-parser": "^2.0",
+        "survos/bootstrap-bundle": "^1.5",
+        "symfony/asset": "^7.2",
+        "symfony/console": "^7.2",
+        "symfony/dotenv": "^7.2",
+        "symfony/expression-language": "^7.2",
         "symfony/flex": "^2",
-        "symfony/framework-bundle": "7.2.*",
-        "symfony/runtime": "7.2.*",
-        "symfony/yaml": "7.2.*"
-    },
-    "require-dev": {
+        "symfony/framework-bundle": "^7.2",
+        "symfony/property-access": "^7.2",
+        "symfony/property-info": "^7.2",
+        "symfony/runtime": "^7.2",
+        "symfony/security-bundle": "^7.2",
+        "symfony/serializer": "^7.2",
+        "symfony/twig-bundle": "^7.2",
+        "symfony/validator": "^7.2",
+        "symfony/yaml": "^7.2"
     },
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
+            "survos/installer": true,
             "symfony/flex": true,
             "symfony/runtime": true
         },
@@ -63,7 +82,10 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.2.*"
+            "require": "^7.2"
         }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.62"
     }
 }
