add missing bundles

--- a/.env
+++ b/.env
@@ -32,3 +32,14 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+BING_KEY1=
+BING_KEY2=
+BING_LOCATION=
+
+TRANSLATION_CACHE_DSN="sqlite:/%kernel.project_dir%/translation.db"
+#SCRAPER_CACHE_DSN="sqlite:/%kernel.project_dir%/translation.db"
+SCRAPER_CACHE_DSN="sqlite:../scraper.db"
+#SCRAPER_CACHE_DSN="sqlite:/tmp/scraper.db"
+
+
