--- a/.env
+++ b/.env
@@ -43,3 +43,12 @@ SCRAPER_CACHE_DSN="sqlite:../scraper.db"
 #SCRAPER_CACHE_DSN="sqlite:/tmp/scraper.db"
 
 
+
+###> symfony/messenger ###
+# Choose one of the transports below
+MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/trans
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+#MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
+
+REDIS="redis://localhost:6379" # matches docker-compose.yml
