--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
         "phpstan/phpdoc-parser": "^2.0",
         "psr/log": "^1.0",
         "survos/bootstrap-bundle": "^1.5",
+        "survos/core-bundle": "*",
         "survos/libre-translate-bundle": "^1.5",
+        "survos/workflow-helper-bundle": "*",
+        "symfony/amqp-messenger": "^7.2",
         "symfony/asset": "^7.2",
         "symfony/asset-mapper": "^7.2",
         "symfony/console": "^7.2",
@@ -38,13 +41,16 @@
         "symfony/runtime": "^7.2",
         "symfony/security-bundle": "^7.2",
         "symfony/serializer": "^7.2",
+        "symfony/translation": "^7.2",
         "symfony/twig-bundle": "^7.2",
         "symfony/validator": "^7.2",
         "symfony/yaml": "^7.2",
+        "tacman/libretranslate": "*@dev",
         "vanderlee/php-sentence": "^1.0"
     },
     "config": {
         "allow-plugins": {
+            "endroid/installer": true,
             "php-http/discovery": true,
             "survos/installer": true,
             "symfony/flex": true,
@@ -99,5 +105,11 @@
         "survos/maker-bundle": "^1.5",
         "symfony/maker-bundle": "^1.62",
         "symfony/web-profiler-bundle": "^7.2"
+    },
+    "repositories": {
+        "libretranslate": {
+            "type": "path",
+            "url": "~/g/tacman/libretranslate"
+        }
     }
 }
