--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-pdo_sqlite": "*",
+        "ext-sodium": "*",
         "api-platform/doctrine-orm": "^4.0",
         "api-platform/symfony": "^4.0",
         "doctrine/dbal": "^3",
@@ -24,6 +25,7 @@
         "psr/log": "^1.0",
         "survos/bootstrap-bundle": "^1.5",
         "survos/core-bundle": "*",
+        "survos/deployment-bundle": "^1.5",
         "survos/libre-translate-bundle": "^1.5",
         "survos/workflow-helper-bundle": "*",
         "symfony/amqp-messenger": "^7.2",
