--- a/composer.json
+++ b/composer.json
@@ -11,44 +11,44 @@
         "ext-iconv": "*",
         "ext-pdo_sqlite": "*",
         "ext-sodium": "*",
-        "api-platform/doctrine-orm": "^4.0",
-        "api-platform/symfony": "^4.0",
-        "doctrine/dbal": "^3",
-        "doctrine/doctrine-bundle": "^2.13",
+        "api-platform/doctrine-orm": "^4.0.16",
+        "api-platform/symfony": "^4.0.16",
+        "doctrine/dbal": "^3.9.4",
+        "doctrine/doctrine-bundle": "^2.13.2",
         "doctrine/doctrine-migrations-bundle": "^3.4",
-        "doctrine/orm": "^3.3",
+        "doctrine/orm": "^3.3.1",
         "nelmio/cors-bundle": "^2.5",
-        "nyholm/psr7": "^1.8",
+        "nyholm/psr7": "^1.8.2",
         "php-http/guzzle7-adapter": "^1.1",
-        "phpdocumentor/reflection-docblock": "^5.6",
+        "phpdocumentor/reflection-docblock": "^5.6.1",
         "phpstan/phpdoc-parser": "^2.0",
-        "psr/log": "^1.0",
-        "survos/bootstrap-bundle": "^1.5",
-        "survos/core-bundle": "*",
-        "survos/deployment-bundle": "^1.5",
-        "survos/libre-translate-bundle": "^1.5",
-        "survos/workflow-helper-bundle": "*",
+        "psr/log": "^1.1.4",
+        "survos/bootstrap-bundle": "^1.5.472",
+        "survos/core-bundle": ">=1.5.472",
+        "survos/deployment-bundle": "^1.5.472",
+        "survos/libre-translate-bundle": "^1.5.472",
+        "survos/workflow-helper-bundle": ">=1.5.472",
         "symfony/amqp-messenger": "^7.2",
         "symfony/asset": "^7.2",
         "symfony/asset-mapper": "^7.2",
-        "symfony/console": "^7.2",
+        "symfony/console": "^7.2.1",
         "symfony/debug-bundle": "^7.2",
         "symfony/dotenv": "^7.2",
         "symfony/expression-language": "^7.2",
-        "symfony/flex": "^2",
-        "symfony/framework-bundle": "^7.2",
-        "symfony/http-client": "^7.2",
+        "symfony/flex": "^2.4.7",
+        "symfony/framework-bundle": "^7.2.2",
+        "symfony/http-client": "^7.2.2",
         "symfony/property-access": "^7.2",
-        "symfony/property-info": "^7.2",
+        "symfony/property-info": "^7.2.2",
         "symfony/runtime": "^7.2",
-        "symfony/security-bundle": "^7.2",
+        "symfony/security-bundle": "^7.2.2",
         "symfony/serializer": "^7.2",
-        "symfony/translation": "^7.2",
+        "symfony/translation": "^7.2.2",
         "symfony/twig-bundle": "^7.2",
-        "symfony/validator": "^7.2",
+        "symfony/validator": "^7.2.2",
         "symfony/yaml": "^7.2",
-        "tacman/libretranslate": "*@dev",
-        "vanderlee/php-sentence": "^1.0"
+        "tacman/libretranslate": ">=2.0.1@dev",
+        "vanderlee/php-sentence": "^1.0.8"
     },
     "config": {
         "allow-plugins": {
@@ -104,14 +104,8 @@
         }
     },
     "require-dev": {
-        "survos/maker-bundle": "^1.5",
-        "symfony/maker-bundle": "^1.62",
-        "symfony/web-profiler-bundle": "^7.2"
-    },
-    "repositories": {
-        "libretranslate": {
-            "type": "path",
-            "url": "~/g/tacman/libretranslate"
-        }
+        "survos/maker-bundle": "^1.5.472",
+        "symfony/maker-bundle": "^1.62.1",
+        "symfony/web-profiler-bundle": "^7.2.2"
     }
 }
