add redis and other extensions

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,12 @@
         "ext-iconv": "*",
         "ext-pdo_sqlite": "*",
         "ext-sodium": "*",
+        "ext-intl": "*",
+        "ext-json": "*",
+        "ext-pdo": "*",
+        "ext-redis": "*",
+        "ext-sqlite3": "*",
+        "ext-xsl": "*",
         "api-platform/doctrine-orm": "^4.0.16",
         "api-platform/symfony": "^4.0.16",
         "doctrine/dbal": "^3.9.4",
