rename bing key

--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ DATABASE_URL=postgresql://postgres:docker@127.0.0.1:5434/translation-server?serv
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
-BING_KEY1=
+BING_KEY=
 BING_KEY2=
 BING_LOCATION=
 
