--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
         "php": ">=8.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "ext-pdo_sqlite": "*",
-        "ext-sodium": "*",
         "ext-intl": "*",
         "ext-json": "*",
         "ext-pdo": "*",
+        "ext-pdo_sqlite": "*",
         "ext-redis": "*",
+        "ext-sodium": "*",
         "ext-sqlite3": "*",
         "ext-xsl": "*",
         "api-platform/doctrine-orm": "^4.0.16",
@@ -25,6 +25,7 @@
         "doctrine/orm": "^3.3.1",
         "nelmio/cors-bundle": "^2.5",
         "nyholm/psr7": "^1.8.2",
+        "paragonie/sodium_compat": "^2.1",
         "php-http/guzzle7-adapter": "^1.1",
         "phpdocumentor/reflection-docblock": "^5.6.1",
         "phpstan/phpdoc-parser": "^2.0",
