--- a/.env
+++ b/.env
@@ -53,3 +53,4 @@ MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/trans
 ###< symfony/messenger ###
 
 REDIS="redis://localhost:6379" # matches docker-compose.yml
+TRANSLATOR_ENDPOINT=https://translation-server.survos.com
