--- a/.env
+++ b/.env
@@ -54,3 +54,7 @@ MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/trans
 
 REDIS="redis://localhost:6379" # matches docker-compose.yml
 TRANSLATOR_ENDPOINT=https://translation-server.survos.com
+
+###> inspector-apm/inspector-symfony ###
+INSPECTOR_INGESTION_KEY=
+###< inspector-apm/inspector-symfony ###
