--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -7,7 +7,9 @@ framework:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
 #             async: '%env(MESSENGER_TRANSPORT_DSN)%'
             # failed: 'doctrine://default?queue_name=failed'
-            # sync: 'sync://'
+             sync: 'sync://'
+             async:
+               dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
              trans_server:
                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
                options:
