--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "doctrine/doctrine-bundle": "^2.13.2",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3.1",
+        "inspector-apm/inspector-symfony": "*",
         "nelmio/cors-bundle": "^2.5",
         "nyholm/psr7": "^1.8.2",
         "paragonie/sodium_compat": "^2.1",
