dont set default source or target, too expensive on startup

--- a/config/packages/survos_libre_translate.yaml
+++ b/config/packages/survos_libre_translate.yaml
@@ -2,7 +2,7 @@ survos_libre_translate:
   host: https://127.0.0.1
   port: 5000
   apikey: 'MasterKey'
-  sourceLanguage: 'en'
-  targetLanguage: 'es'
+#  sourceLanguage: 'en'
+#  targetLanguage: 'es'
   server: https://trans.wip
 #  server: https://translation-server.survos.com
