refactor to not use jef42

--- a/.env
+++ b/.env
@@ -58,3 +58,6 @@ TRANSLATOR_ENDPOINT=https://translation-server.survos.com
 ###> inspector-apm/inspector-symfony ###
 INSPECTOR_INGESTION_KEY=
 ###< inspector-apm/inspector-symfony ###
+
+LIBRE_URL=http://localhost
+LIBRE_API_KEY=
