--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "doctrine/doctrine-bundle": "^2.13.2",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3.1",
+        "halaxa/json-machine": "^1.2",
         "inspector-apm/inspector-symfony": ">=1.7",
         "nelmio/cors-bundle": "^2.5",
         "nyholm/psr7": "^1.8.2",
@@ -45,14 +46,15 @@
         "symfony/dotenv": "^7.2",
         "symfony/expression-language": "^7.2",
         "symfony/flex": "^2.4.7",
-        "symfony/framework-bundle": "^7.2.2",
+        "symfony/framework-bundle": "^7.2",
         "symfony/http-client": "^7.2.2",
         "symfony/property-access": "^7.2",
         "symfony/property-info": "^7.2.2",
         "symfony/runtime": "^7.2",
         "symfony/security-bundle": "^7.2.2",
         "symfony/serializer": "^7.2",
-        "symfony/translation": "^7.2.2",
+        "symfony/translation": "^7.2",
+        "symfony/translation-contracts": "*",
         "symfony/twig-bundle": "^7.2",
         "symfony/validator": "^7.2.2",
         "symfony/yaml": "^7.2",
