--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,7 +1,7 @@
 framework:
     default_locale: en
+    enabled_locales: ['en', 'es', 'da', 'fr', 'de'] # , 'de', 'hi', 'da'] # , 'fr', 'de', 'uk', 'hi', 'hu']
     translator:
         default_path: '%kernel.project_dir%/translations'
         fallbacks:
             - en
-        providers:
