--- a/app.json
+++ b/app.json
@@ -8,11 +8,7 @@
   ],
   "cron": [
     {
-      "command": "php -d memory_limit=2G bin/console mess:consume trans_server  --time-limit 590",
-      "schedule": "*/10 * * * *"
-    },
-    {
-      "command": "php -d memory_limit=2G bin/console mess:consume trans_server  --time-limit 270",
+      "command": "php -d memory_limit=2G bin/console mess:consume trans_server  --time-limit 290",
       "schedule": "*/5 * * * *"
     }
   ],
@@ -20,7 +16,7 @@
   "scripts": {
     "dokku": {
       "predeploy": "bin/console importmap:install && bin/console asset-map:compile && bin/console  secrets:decrypt-to-local --force && bin/console doctrine:migrations:migrate -n --allow-no-migration",
-      "postdeploy": "bin/console about; php -v"
+      "postdeploy": "bin/console about; php -i | grep memory_limit "
     }
   },
   "env": {
