--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,13 @@
         "php-http/guzzle7-adapter": "^1.1",
         "phpdocumentor/reflection-docblock": "^5.6.1",
         "phpstan/phpdoc-parser": "^2.0",
-        "psr/log": "^1.1.4",
-        "survos/bootstrap-bundle": "^1.5.479",
-        "survos/core-bundle": ">=1.5.479",
-        "survos/deployment-bundle": "^1.5.479",
-        "survos/libre-translate-bundle": "^1.5.479",
-        "survos/simple-datatables-bundle": "^1.5.479",
-        "survos/workflow-helper-bundle": ">=1.5.479",
+        "psr/log": "^3.0.2",
+        "survos/bootstrap-bundle": "^1.5.480",
+        "survos/core-bundle": ">=1.5.480",
+        "survos/deployment-bundle": "^1.5.480",
+        "survos/libre-translate-bundle": "^1.5.480",
+        "survos/simple-datatables-bundle": "^1.5.480",
+        "survos/workflow-helper-bundle": ">=1.5.480",
         "symfony/amqp-messenger": "^7.2",
         "symfony/asset": "^7.2",
         "symfony/asset-mapper": "^7.2",
@@ -48,6 +48,7 @@
         "symfony/flex": "^2.4.7",
         "symfony/framework-bundle": "^7.2.2",
         "symfony/http-client": "^7.2.2",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/property-access": "^7.2",
         "symfony/property-info": "^7.2.2",
         "symfony/runtime": "^7.2",
@@ -115,7 +116,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.7.1",
-        "survos/maker-bundle": "^1.5.479",
+        "survos/maker-bundle": "^1.5.480",
         "symfony/maker-bundle": "^1.62.1",
         "symfony/web-profiler-bundle": "^7.2.2"
     }
