--- a/.env
+++ b/.env
@@ -36,8 +36,8 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 
 BING_KEY=
 BING_KEY2=
-BING_LOCATION=
 BING_BACKUP=true
+BING_LOCATION=eastus
 
 TRANSLATION_CACHE_DSN="sqlite:/%kernel.project_dir%/translation.db"
 #SCRAPER_CACHE_DSN="sqlite:/%kernel.project_dir%/translation.db"
