re-enable inspector

--- a/config/packages/inspector.yaml
+++ b/config/packages/inspector.yaml
@@ -1,6 +1,6 @@
 inspector:
     ingestion_key: '%env(INSPECTOR_INGESTION_KEY)%'
-    enabled: false
+#    enabled: false
     ignore_routes:
         - '/_wdt*'
         - '/_profiler*'
