--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/public/data/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
@@ -15,3 +16,4 @@
 ###< symfony/asset-mapper ###
 
 scraper.db
+
