--- a/.env
+++ b/.env
@@ -55,6 +55,7 @@ MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/trans
 
 REDIS="redis://localhost:6379" # matches docker-compose.yml
 TRANSLATOR_ENDPOINT=https://translation-server.survos.com
+PROXY=''
 
 ###> inspector-apm/inspector-symfony ###
 INSPECTOR_INGESTION_KEY=
@@ -62,3 +63,4 @@ INSPECTOR_INGESTION_KEY=
 
 LIBRE_URL=http://localhost
 LIBRE_API_KEY=
+
