--- a/composer.json
+++ b/composer.json
@@ -33,34 +33,35 @@
         "phpdocumentor/reflection-docblock": "^5.6.1",
         "phpstan/phpdoc-parser": "^2.0",
         "psr/log": "^3.0.2",
-        "survos/bootstrap-bundle": "^1.5.484",
-        "survos/core-bundle": ">=1.5.484",
-        "survos/deployment-bundle": "^1.5.484",
-        "survos/libre-translate-bundle": "^1.5.484",
-        "survos/simple-datatables-bundle": "^1.5.484",
-        "survos/workflow-helper-bundle": ">=1.5.484",
-        "symfony/amqp-messenger": "^7.2",
+        "survos/bootstrap-bundle": "^1.5.492",
+        "survos/core-bundle": ">=1.5.492",
+        "survos/deployment-bundle": "^1.5.492",
+        "survos/libre-translate-bundle": "^1.5.492",
+        "survos/simple-datatables-bundle": "^1.5.492",
+        "survos/workflow-helper-bundle": ">=1.5.492",
+        "symfony/amqp-messenger": "^7.2.3",
         "symfony/asset": "^7.2",
-        "symfony/asset-mapper": "^7.2",
+        "symfony/asset-mapper": "^7.2.3",
         "symfony/console": "^7.2.1",
         "symfony/debug-bundle": "^7.2",
         "symfony/dotenv": "^7.2",
         "symfony/expression-language": "^7.2",
         "symfony/flex": "^2.4.7",
-        "symfony/framework-bundle": "^7.2.2",
-        "symfony/http-client": "^7.2.2",
+        "symfony/framework-bundle": "^7.2.3",
+        "symfony/http-client": "^7.2.3",
         "symfony/monolog-bundle": "^3.10",
-        "symfony/property-access": "^7.2",
-        "symfony/property-info": "^7.2.2",
-        "symfony/runtime": "^7.2",
-        "symfony/security-bundle": "^7.2.2",
-        "symfony/serializer": "^7.2",
+        "symfony/property-access": "^7.2.3",
+        "symfony/property-info": "^7.2.3",
+        "symfony/runtime": "^7.2.3",
+        "symfony/security-bundle": "^7.2.3",
+        "symfony/serializer": "^7.2.3",
         "symfony/translation": "^7.2.2",
         "symfony/translation-contracts": ">=3.5.1",
         "symfony/twig-bundle": "^7.2",
-        "symfony/validator": "^7.2.2",
-        "symfony/yaml": "^7.2",
-        "vanderlee/php-sentence": "^1.0.8"
+        "symfony/validator": "^7.2.3",
+        "symfony/yaml": "^7.2.3",
+        "vanderlee/php-sentence": "^1.0.8",
+        "zenstruck/bytes": "*"
     },
     "config": {
         "allow-plugins": {
@@ -117,8 +118,8 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.7.1",
-        "survos/maker-bundle": "^1.5.484",
+        "survos/maker-bundle": "^1.5.492",
         "symfony/maker-bundle": "^1.62.1",
-        "symfony/web-profiler-bundle": "^7.2.2"
+        "symfony/web-profiler-bundle": "^7.2.3"
     }
 }
