--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
         "symfony/translation": "^7.2.2",
         "symfony/translation-contracts": ">=3.5.1",
         "symfony/twig-bundle": "^7.2",
+        "symfony/ux-chartjs": "^2.22",
         "symfony/validator": "^7.2.3",
         "symfony/yaml": "^7.2.3",
         "vanderlee/php-sentence": "^1.0.8",
