turn off bing until people, loc_codes and places are fixed

--- a/.env
+++ b/.env
@@ -36,7 +36,7 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 
 BING_KEY=
 BING_KEY2=
-BING_BACKUP=true
+BING_BACKUP=false
 BING_LOCATION=eastus
 
 TRANSLATION_CACHE_DSN="sqlite:/%kernel.project_dir%/translation.db"
