--- a/composer.json
+++ b/composer.json
@@ -96,6 +96,9 @@
         "symfony/polyfill-php82": "*"
     },
     "scripts": {
+        "export": [
+            "php -d memory_limit=2G bin/console app:export --zip"
+        ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
