add doctrine transport

--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "symfony/asset-mapper": "^7.2.3",
         "symfony/console": "^7.2.1",
         "symfony/debug-bundle": "^7.2",
+        "symfony/doctrine-messenger": "^7.2",
         "symfony/dotenv": "^7.2",
         "symfony/expression-language": "^7.2",
         "symfony/flex": "^2.4.7",
