add bootstrap bundle, refactor dispatch to add more languages

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@
 
 scraper.db
 
+
+###> phpstan/phpstan ###
+phpstan.neon
+###< phpstan/phpstan ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
