--- a/composer.json
+++ b/composer.json
@@ -33,18 +33,19 @@
         "phpdocumentor/reflection-docblock": "^5.6.1",
         "phpstan/phpdoc-parser": "^2.0",
         "psr/log": "^3.0.2",
-        "survos/bootstrap-bundle": "^1.5.492",
-        "survos/core-bundle": ">=1.5.492",
-        "survos/deployment-bundle": "^1.5.492",
-        "survos/libre-translate-bundle": "^1.5.492",
-        "survos/simple-datatables-bundle": "^1.5.492",
-        "survos/workflow-helper-bundle": ">=1.5.492",
+        "survos/bootstrap-bundle": "^1.5",
+        "survos/command-bundle": "^1.5",
+        "survos/core-bundle": ">=1.5.495",
+        "survos/deployment-bundle": "^1.5.495",
+        "survos/libre-translate-bundle": "^1.5.495",
+        "survos/simple-datatables-bundle": "^1.5.495",
+        "survos/workflow-helper-bundle": ">=1.5.495",
         "symfony/amqp-messenger": "^7.2.3",
         "symfony/asset": "^7.2",
         "symfony/asset-mapper": "^7.2.3",
         "symfony/console": "^7.2.1",
         "symfony/debug-bundle": "^7.2",
-        "symfony/doctrine-messenger": "^7.2",
+        "symfony/doctrine-messenger": "^7.2.3",
         "symfony/dotenv": "^7.2",
         "symfony/expression-language": "^7.2",
         "symfony/flex": "^2.4.7",
@@ -56,14 +57,17 @@
         "symfony/runtime": "^7.2.3",
         "symfony/security-bundle": "^7.2.3",
         "symfony/serializer": "^7.2.3",
+        "symfony/string": "^7.2",
         "symfony/translation": "^7.2.2",
         "symfony/translation-contracts": ">=3.5.1",
         "symfony/twig-bundle": "^7.2",
-        "symfony/ux-chartjs": "^2.22",
+        "symfony/ux-chartjs": "^2.22.1",
         "symfony/validator": "^7.2.3",
         "symfony/yaml": "^7.2.3",
+        "twig/extra-bundle": "^3.19",
+        "twig/string-extra": "^3.19",
         "vanderlee/php-sentence": "^1.0.8",
-        "zenstruck/bytes": "*"
+        "zenstruck/bytes": ">=1"
     },
     "config": {
         "allow-plugins": {
@@ -123,7 +127,9 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.7.1",
-        "survos/maker-bundle": "^1.5.492",
+        "phpstan/phpstan": "^2.1.2",
+        "phpunit/phpunit": "^9.6.22",
+        "survos/maker-bundle": "^1.5",
         "symfony/maker-bundle": "^1.62.1",
         "symfony/web-profiler-bundle": "^7.2.3"
     }
