--- a/config/packages/survos_bootstrap.yaml
+++ b/config/packages/survos_bootstrap.yaml
@@ -6,28 +6,16 @@ survos_bootstrap:
       register: app_register
       homepage: app_homepage
   menu_options:
-      owner: null
-      project: null
-      core: null
-  #    core: null
-      category: null
-      categoryField: null
-      catalog: null
-      spreadsheet: null
-      fieldMap: null
-      sheet: null
-      instance: null
       frontPage: false
-      showAppMenu: false
 
 
   app:
-    code: my-app
-    abbr: <b>my</b>App
+    code: trans
+    abbr: <b>trans</b>Server
   options:
     # consider https://startbootstrap.com/previews/simple-sidebar as another theme
-    theme: bootswatch
-    allow_login: false
+    theme: tabler
+    allow_login: true
     offcanvas: end
 
 
