--- a/config/packages/routing.yaml
+++ b/config/packages/routing.yaml
@@ -3,8 +3,11 @@ framework:
         # Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
         # See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
         #default_uri: http://localhost
+        default_uri: 'https://trans.wip/'
 
 when@prod:
     framework:
         router:
             strict_requirements: null
+
+# config/packages/routing.yaml
