--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,6 +1,13 @@
 api_platform:
-    title: Hello API Platform
+    title: Translation Server API
     version: 1.0.0
+    formats:
+        jsonld:
+            mime_types: [ 'application/ld+json' ]
+
+        json:
+            mime_types: [ 'application/json' ]
+
     defaults:
         stateless: true
         cache_headers:
