--- a/nginx.conf
+++ b/nginx.conf
@@ -64,6 +64,9 @@ location = /robots.txt  { access_log off; log_not_found off; }
 
 error_page 404 /index.php;
 
+location /public/data/ {
+    autoindex on;
+}
 
 location ~ /\.(?!well-known).* {
     deny all;
