--- a/.env
+++ b/.env
@@ -64,3 +64,7 @@ INSPECTOR_INGESTION_KEY=
 LIBRE_URL=http://localhost
 LIBRE_API_KEY=
 
+
+###> survos/bunny-bundle ###
+BUNNY_API_KEY=
+###< survos/bunny-bundle ###
