--- a/config/packages/survos_libre_translate.yaml
+++ b/config/packages/survos_libre_translate.yaml
@@ -1,6 +1,6 @@
-survos_libre_translate:
-  host: '%env(LIBRE_URL)%'
-  apikey: '%env(LIBRE_API_KEY)%'
-  port: 5000
-  server: '%env(TRANSLATOR_ENDPOINT)%'
-  enableBing: false
+#survos_libre_translate:
+#  host: '%env(LIBRE_URL)%'
+#  apikey: '%env(LIBRE_API_KEY)%'
+#  port: 5000
+#  server: '%env(TRANSLATOR_ENDPOINT)%'
+#  enableBing: false
