--- a/.env
+++ b/.env
@@ -61,8 +61,9 @@ PROXY=''
 INSPECTOR_INGESTION_KEY=
 ###< inspector-apm/inspector-symfony ###
 
-LIBRE_URL=http://localhost
+#LIBRE_URL=http://localhost
 LIBRE_API_KEY=
+LIBRE_HOST=https://babel.survos.com
 
 
 ###> survos/bunny-bundle ###
