--- a/composer.json
+++ b/composer.json
@@ -18,54 +18,58 @@
         "ext-sqlite3": "*",
         "ext-xsl": "*",
         "ext-zip": "*",
-        "api-platform/doctrine-orm": "^4.1.20",
-        "api-platform/symfony": "^4.1.20",
-        "doctrine/dbal": "^4.3.2",
-        "doctrine/doctrine-bundle": "^2.15.1",
+        "api-platform/doctrine-orm": "^4.1.23",
+        "api-platform/symfony": "^4.1.23",
+        "doctrine/dbal": "^4.3.3",
+        "doctrine/doctrine-bundle": "^2.16.1",
         "doctrine/doctrine-migrations-bundle": "^3.4.2",
         "doctrine/orm": "^3.5.2",
-        "easycorp/easyadmin-bundle": "^4.24.9",
+        "easycorp/easyadmin-bundle": "^4.25.0",
+        "ecourty/mcp-server-bundle": "^1.3",
+        "fguillot/json-rpc": "^1.3",
         "halaxa/json-machine": "^1.2.5",
-        "inspector-apm/inspector-symfony": ">=1.8.2",
+        "inspector-apm/inspector-symfony": ">=1.8.4",
         "nelmio/cors-bundle": "^2.5",
         "nyholm/psr7": "^1.8.2",
         "paragonie/sodium_compat": "^2.1",
         "php-http/guzzle7-adapter": "^1.1",
-        "phpdocumentor/reflection-docblock": "^5.6.2",
-        "phpstan/phpdoc-parser": "^2.2",
+        "phpdocumentor/reflection-docblock": "^5.6.3",
+        "phpstan/phpdoc-parser": "^2.3",
         "psr/log": "^3.0.2",
+        "survos/babel-bundle": "*",
         "survos/bootstrap-bundle": "^1.6.44",
         "survos/bunny-bundle": "^1.6.44",
         "survos/command-bundle": "^1.6.44",
         "survos/core-bundle": ">=1.6.44",
         "survos/deployment-bundle": "^1.6.44",
-        "survos/libre-translate-bundle": "^1.6.44",
+        "survos/lingua-bundle": "^2.0.3",
         "survos/simple-datatables-bundle": "^1.6.44",
-        "survos/workflow-helper-bundle": ">=1.6.44",
+        "survos/state-bundle": "dev-main",
+        "survos/translator-bundle": "^2.0.3",
         "symfony/amqp-messenger": "^7.3.2",
         "symfony/asset": "^7.3",
-        "symfony/asset-mapper": "^7.3.2",
-        "symfony/console": "^7.3.2",
+        "symfony/asset-mapper": "^7.3.3",
+        "symfony/console": "^7.3.3",
         "symfony/debug-bundle": "^7.3",
-        "symfony/doctrine-messenger": "^7.3.2",
+        "symfony/doctrine-messenger": "^7.3.3",
         "symfony/dotenv": "^7.3.2",
         "symfony/expression-language": "^7.3.2",
-        "symfony/flex": "^2.8.1",
-        "symfony/framework-bundle": "^7.3.2",
-        "symfony/http-client": "^7.3.2",
+        "symfony/flex": "^2.8.2",
+        "symfony/framework-bundle": "^7.3.3",
+        "symfony/http-client": "^7.3.3",
         "symfony/monolog-bundle": "^3.10",
-        "symfony/property-access": "^7.3.2",
+        "symfony/property-access": "^7.3.3",
         "symfony/property-info": "^7.3.1",
         "symfony/runtime": "^7.3.1",
-        "symfony/security-bundle": "^7.3.2",
-        "symfony/serializer": "^7.3.2",
-        "symfony/string": "^7.3.2",
-        "symfony/translation": "^7.3.2",
+        "symfony/security-bundle": "^7.3.3",
+        "symfony/serializer": "^7.3.3",
+        "symfony/string": "^7.3.3",
+        "symfony/translation": "^7.3.3",
         "symfony/translation-contracts": ">=3.6.0",
         "symfony/twig-bundle": "^7.3.2",
-        "symfony/ux-chartjs": "^2.29.1",
-        "symfony/validator": "^7.3.2",
-        "symfony/yaml": "^7.3.2",
+        "symfony/ux-chartjs": "^2.30.0",
+        "symfony/validator": "^7.3.3",
+        "symfony/yaml": "^7.3.3",
         "twig/extra-bundle": "^3.21",
         "twig/string-extra": "^3.21",
         "vanderlee/php-sentence": "^1.0.8",
@@ -73,7 +77,6 @@
     },
     "config": {
         "allow-plugins": {
-            "endroid/installer": true,
             "php-http/discovery": true,
             "survos/installer": true,
             "symfony/flex": true,
@@ -130,11 +133,11 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^4.1",
-        "jawira/doctrine-diagram-bundle": "^0.8.0",
+        "jawira/doctrine-diagram-bundle": "^v1.0.1",
         "phpstan/phpstan": "^2.1.22",
-        "phpunit/phpunit": "^12.3.4",
-        "survos/maker-bundle": "^1.6.44",
+        "phpunit/phpunit": "^12.3.8",
         "symfony/maker-bundle": "^1.64.0",
-        "symfony/web-profiler-bundle": "^7.3.2"
+        "symfony/web-profiler-bundle": "^7.3.3",
+        "zenstruck/console-extra": "^1.4"
     }
 }
