--- a/.env
+++ b/.env
@@ -70,4 +70,4 @@ LIBRE_HOST=https://babel.survos.com
 BUNNY_API_KEY=
 ###< survos/bunny-bundle ###
 
-DEFAULT_TRANSPORT=async
+#DEFAULT_TRANSPORT=async
