--- a/composer.json
+++ b/composer.json
@@ -18,67 +18,69 @@
         "ext-sqlite3": "*",
         "ext-xsl": "*",
         "ext-zip": "*",
-        "api-platform/doctrine-orm": "^4.1.23",
-        "api-platform/symfony": "^4.1.23",
-        "doctrine/dbal": "^4.3.3",
-        "doctrine/doctrine-bundle": "^2.16.1",
-        "doctrine/doctrine-migrations-bundle": "^3.4.2",
-        "doctrine/orm": "^3.5.2",
-        "easycorp/easyadmin-bundle": "^4.25.0",
-        "ecourty/mcp-server-bundle": "^1.3",
-        "fguillot/json-rpc": "^1.3",
-        "halaxa/json-machine": "^1.2.5",
-        "inspector-apm/inspector-symfony": ">=1.8.4",
-        "nelmio/cors-bundle": "^2.5",
+        "api-platform/core": "^4.2.9",
+        "api-platform/doctrine-orm": "^4.2.8",
+        "api-platform/symfony": "^4.2.8",
+        "doctrine/dbal": "^4.4.1",
+        "doctrine/doctrine-bundle": "^3.1",
+        "doctrine/doctrine-fixtures-bundle": "^4.3.1",
+        "doctrine/doctrine-migrations-bundle": "^3.7.0",
+        "doctrine/orm": "^3.5.8",
+        "easycorp/easyadmin-bundle": "^4.27.4",
+        "fguillot/json-rpc": "^1.3.1",
+        "halaxa/json-machine": "^1.2.6",
+        "inspector-apm/inspector-symfony": ">=1.10.0",
+        "nelmio/cors-bundle": "^2.6",
         "nyholm/psr7": "^1.8.2",
-        "paragonie/sodium_compat": "^2.1",
+        "paragonie/sodium_compat": "^2.4",
         "php-http/guzzle7-adapter": "^1.1",
-        "phpdocumentor/reflection-docblock": "^5.6.3",
+        "phpdocumentor/reflection-docblock": "^5.6.5",
         "phpstan/phpdoc-parser": "^2.3",
         "psr/log": "^3.0.2",
-        "survos/babel-bundle": "*",
-        "survos/bootstrap-bundle": "^1.6.44",
-        "survos/bunny-bundle": "^1.6.44",
-        "survos/command-bundle": "^1.6.44",
-        "survos/core-bundle": ">=1.6.44",
-        "survos/deployment-bundle": "^1.6.44",
-        "survos/lingua-bundle": "^2.0.3",
-        "survos/simple-datatables-bundle": "^1.6.44",
-        "survos/state-bundle": "dev-main",
-        "survos/translator-bundle": "^2.0.3",
-        "symfony/amqp-messenger": "^7.3.2",
-        "symfony/asset": "^7.3",
-        "symfony/asset-mapper": "^7.3.3",
-        "symfony/console": "^7.3.3",
-        "symfony/debug-bundle": "^7.3",
-        "symfony/doctrine-messenger": "^7.3.3",
-        "symfony/dotenv": "^7.3.2",
-        "symfony/expression-language": "^7.3.2",
-        "symfony/flex": "^2.8.2",
-        "symfony/framework-bundle": "^7.3.3",
-        "symfony/http-client": "^7.3.3",
-        "symfony/monolog-bundle": "^3.10",
-        "symfony/property-access": "^7.3.3",
-        "symfony/property-info": "^7.3.1",
-        "symfony/runtime": "^7.3.1",
-        "symfony/security-bundle": "^7.3.3",
-        "symfony/serializer": "^7.3.3",
-        "symfony/string": "^7.3.3",
-        "symfony/translation": "^7.3.3",
-        "symfony/translation-contracts": ">=3.6.0",
-        "symfony/twig-bundle": "^7.3.2",
-        "symfony/ux-chartjs": "^2.30.0",
-        "symfony/validator": "^7.3.3",
-        "symfony/yaml": "^7.3.3",
-        "twig/extra-bundle": "^3.21",
-        "twig/string-extra": "^3.21",
+        "survos/babel-bundle": "^2.0.81",
+        "survos/bootstrap-bundle": "^2.0.81",
+        "survos/bunny-bundle": "^2.0.81",
+        "survos/command-bundle": "^2.0.81",
+        "survos/core-bundle": "^2.0.81",
+        "survos/deployment-bundle": "^2.0.81",
+        "survos/ez-bundle": "^2.0",
+        "survos/jsonl-bundle": "^2.0",
+        "survos/lingua-bundle": "^2.0.81",
+        "survos/simple-datatables-bundle": "^2.0.81",
+        "survos/state-bundle": ">=2.0.81",
+        "survos/translator-bundle": "^2.0.81",
+        "symfony/amqp-messenger": "^7.4||^8.0",
+        "symfony/asset": "^7.4||^8.0",
+        "symfony/asset-mapper": "^7.4||^8.0",
+        "symfony/console": "^7.4.1||^8.0.1",
+        "symfony/doctrine-messenger": "^7.4.1||^8.0.1",
+        "symfony/dotenv": "^7.4||^8.0",
+        "symfony/expression-language": "^7.4||^8.0",
+        "symfony/flex": "^2.10.0",
+        "symfony/framework-bundle": "^7.4.1||^8.0.1",
+        "symfony/http-client": "^7.4.1||^8.0.1",
+        "symfony/monolog-bundle": "^4.0.1",
+        "symfony/property-access": "^7.4||^8.0",
+        "symfony/property-info": "^7.4.1||^8.0.1",
+        "symfony/runtime": "^7.4.1||^8.0.1",
+        "symfony/security-bundle": "^7.4||^8.0",
+        "symfony/serializer": "^7.4.2||^8.0.2",
+        "symfony/string": "^7.4||^8.0.1",
+        "symfony/translation": "^7.4||^8.0.1",
+        "symfony/translation-contracts": ">=3.6.1",
+        "symfony/twig-bundle": "^7.4||^8.0",
+        "symfony/ux-chartjs": "^2.31.0",
+        "symfony/validator": "^7.4.2||^8.0.2",
+        "symfony/yaml": "^7.4.1||^8.0.1",
+        "twig/extra-bundle": "^3.22.1",
+        "twig/string-extra": "^3.22.1",
         "vanderlee/php-sentence": "^1.0.8",
-        "zenstruck/bytes": ">=1"
+        "zenstruck/bytes": ">=1.1"
     },
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
-            "survos/installer": true,
+            "survos/installer": false,
             "symfony/flex": true,
             "symfony/runtime": true
         },
@@ -127,17 +129,16 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
-            "require": "^7.3"
+            "allow-contrib": true
         }
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^4.1",
-        "jawira/doctrine-diagram-bundle": "^v1.0.1",
-        "phpstan/phpstan": "^2.1.22",
-        "phpunit/phpunit": "^12.3.8",
-        "symfony/maker-bundle": "^1.64.0",
-        "symfony/web-profiler-bundle": "^7.3.3",
-        "zenstruck/console-extra": "^1.4"
+        "roave/security-advisories": "dev-latest",
+        "jawira/doctrine-diagram-bundle": "^1.2.0",
+        "phpstan/phpstan": "^2.1.33",
+        "phpunit/phpunit": "^12.5.2",
+        "symfony/maker-bundle": "^1.65.1",
+        "symfony/web-profiler-bundle": "^7.4||^8.0",
+        "symfony/debug-bundle": "^7.4||^8.0"
     }
 }
