--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -8,13 +8,8 @@ framework:
 #             async: '%env(MESSENGER_TRANSPORT_DSN)%'
              failed: 'doctrine://default?queue_name=failed'
              sync: 'sync://'
-#             async:
-#               dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
-#               options:
-#                 exchange:
-#                   name: async
-#                 queues:
-#                   async: ~
+             async:
+               dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
 
         routing:
             # Route your messages to the transports
