--- a/config/packages/survos_bunny.yaml
+++ b/config/packages/survos_bunny.yaml
@@ -1,5 +1,5 @@
 survos_bunny:
-#    api_key: '%env(BUNNY_API_KEY)%'
+    api_key: '%env(BUNNY_API_KEY)%'
     storage_zone: museado-data-zip
     zones:
         -
