--- a/app.json
+++ b/app.json
@@ -1,42 +1,5 @@
 {
-  "name": "translation-server",
-  "description": "Async translation server",
-  "keywords": [
-    "php",
-    "symfony",
-    "translation"
-  ],
-  "cron": [
-    {
-      "command": "php -d memory_limit=2G bin/console mess:consume async --time-limit 290",
-      "schedule": "*/5 * * * *"
-    }
-  ],
-  "repository": "https://github.com/survos-sites/translation-server",
-  "scripts": {
-    "dokku": {
-      "predeploy": "bin/console importmap:install && bin/console asset-map:compile && bin/console  secrets:decrypt-to-local --force && bin/console doctrine:migrations:migrate -n --allow-no-migration",
-      "postdeploy": "bin/console about; php -i | grep memory_limit "
-    }
-  },
-  "env": {
-    "SECRET_TOKEN": {
-      "description": "A secret key for verifying the integrity of signed cookies.",
-      "value": "secret"
-    },
-    "WEB_CONCURRENCY": {
-      "description": "The number of processes to run.",
-      "generator": "echo 5"
-    }
-  },
-  "image": "gliderlabs/herokuish",
-  "addons": [
-    "dokku-postgres",
-    "dokku-redis"
-  ],
-  "buildpacks": [
-    {
-      "url": "https://github.com/heroku/heroku-buildpack-php.git"
-    }
-  ]
+    "name": "trans",
+    "description": "Async translation server",
+    "repository": "https://github.com/survos-sites/translation-server"
 }
