--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "trans",
-    "description": "Async translation server",
+    "name": "lingua",
+    "description": "Lingua translation server",
     "repository": "https://github.com/survos-sites/translation-server"
 }
