--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "type": "project",
     "name": "survos-sites/translation-server",
-    "description": "Async translation server",
+    "description": "Lingua Translation Server",
     "license": "proprietary",
     "minimum-stability": "stable",
     "prefer-stable": true,
@@ -18,17 +18,16 @@
         "ext-sqlite3": "*",
         "ext-xsl": "*",
         "ext-zip": "*",
-        "api-platform/core": "^4.2.9",
+        "api-platform/core": "^4.2.10",
         "api-platform/doctrine-orm": "^4.2.8",
         "api-platform/symfony": "^4.2.8",
         "doctrine/dbal": "^4.4.1",
         "doctrine/doctrine-bundle": "^3.1",
         "doctrine/doctrine-fixtures-bundle": "^4.3.1",
-        "doctrine/doctrine-migrations-bundle": "^3.7.0",
+        "doctrine/doctrine-migrations-bundle": "^4.0",
         "doctrine/orm": "^3.5.8",
-        "easycorp/easyadmin-bundle": "^4.27.4",
+        "easycorp/easyadmin-bundle": "^4.27.5",
         "fguillot/json-rpc": "^1.3.1",
-        "halaxa/json-machine": "^1.2.6",
         "inspector-apm/inspector-symfony": ">=1.10.0",
         "nelmio/cors-bundle": "^2.6",
         "nyholm/psr7": "^1.8.2",
@@ -42,7 +41,7 @@
         "survos/bunny-bundle": "^2.0.83",
         "survos/command-bundle": "^2.0.83",
         "survos/core-bundle": "^2.0.83",
-        "survos/deployment-bundle": "^2.0",
+        "survos/deployment-bundle": "^2.0.83",
         "survos/ez-bundle": "^2.0.82",
         "survos/jsonl-bundle": "^2.0.83",
         "survos/lingua-bundle": "^2.0.82",
@@ -136,7 +135,7 @@
         "roave/security-advisories": "dev-latest",
         "jawira/doctrine-diagram-bundle": "^1.2.0",
         "phpstan/phpstan": "^2.1.33",
-        "phpunit/phpunit": "^12.5.2",
+        "phpunit/phpunit": "^12.5.3",
         "symfony/maker-bundle": "^1.65.1",
         "symfony/web-profiler-bundle": "^7.4||^8.0",
         "symfony/debug-bundle": "^7.4||^8.0"
