--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -19,8 +19,6 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
-        controller_resolver:
-            auto_mapping: false
 
 when@test:
     doctrine:
@@ -31,6 +29,9 @@ when@test:
 when@prod:
     doctrine:
         orm:
+            metadata_cache_driver:
+                type: pool
+                pool: doctrine.system_cache_pool
             query_cache_driver:
                 type: pool
                 pool: doctrine.system_cache_pool
