remove dump, point to lingua server

--- a/.env
+++ b/.env
@@ -54,7 +54,7 @@ MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/trans
 ###< symfony/messenger ###
 
 REDIS="redis://localhost:6379" # matches docker-compose.yml
-TRANSLATOR_ENDPOINT=https://translation-server.survos.com
+TRANSLATOR_ENDPOINT=https://lingua.survos.com
 PROXY=''
 
 ###> inspector-apm/inspector-symfony ###
