--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "repository": "https://github.com/survos-sites/translation-server",
     "scripts": {
         "dokku": {
-            "predeploy": "./c mess:stop && ./c secrets:decrypt-to-local --force && ./c importmap:install && ./c asset-map:compile && ./c fos:js-routing:dump --format=js --target=public/js/fos_js_routes.js --callback=\"export default \" && ./c doctrine:migrations:migrate -n --allow-no-migration",
+            "predeploy": "bin/predeploy.sh --prod",
             "postdeploy": "php bin/console about"
         }
     },
