use doctrine for messenger

--- a/.env
+++ b/.env
@@ -48,9 +48,9 @@ SCRAPER_CACHE_DSN="sqlite:../scraper.db"
 
 ###> symfony/messenger ###
 # Choose one of the transports below
-MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/trans
+#MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/trans
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-#MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 REDIS="redis://localhost:6379" # matches docker-compose.yml
